--- a/RY_csaw_ET_edit.Rmd
+++ b/RY_csaw_ET_edit.Rmd
@@ -90,11 +90,11 @@ bin.size <- 2000L
 binned <- windowCounts(samples$bamReads, bin=TRUE, width=bin.size, param=param)
 
 filter.stat <- filterWindowsGlobal(data_csaw, background=binned)
-keep <- filter.stat$filter > log2(2.2)
+keep <- filter.stat$filter > log2(16)
 sum(keep)
 
 #filtered data keeping all regions > background
-    filtered.data.K27 <- data_csaw[keep,]
+    filtered.data <- data_csaw[keep,]
 
 
 
@@ -121,7 +121,7 @@ library(edgeR)
 grouping <- factor(paste(samples$Strain, samples$Antibody, sep="."))
 
 #create a DGElistK9regions object
-DGElist <- asDGEList(filtered.data.K27, group=factor(grouping)) 
+DGElist <- asDGEList(filtered.data, group=factor(grouping)) 
                                         #this creates an object with a counts DF and a samples DF
 
 #replace generic "Sample1, Sample2" names with actual names of samples
@@ -273,7 +273,7 @@ FC_WTvInput.K27.contrast <- makeContrasts(K27vWT=WT.H3K27me3-WT.input, levels=de
 #analyze data
 FC_WTvI.K27.res <- glmQLFTest(fit, contrast=FC_WTvInput.K27.contrast)
 #merge results to generate FDR; #calculates FRD on a per-region basis. This is not appropriate here since you have set the window size to 1000
-FC_WTvI.K27.merged <- mergeResults(filtered.data.K27, FC_WTvI.K27.res$table, tol=300, 
+FC_WTvI.K27.merged <- mergeResults(filtered.data, FC_WTvI.K27.res$table, tol=300, 
                             merge.args=list(max.width=300))
 #move FC data into a dataframe
 WTvI.K27.tabular <- FC_WTvI.K27.merged$combined
@@ -285,7 +285,7 @@ mcols(WTvI.K27.out.ranges) <- DataFrame(WTvI.K27.tabular)
 ##set7 mistakes in naming here- use the WT example 
 FC_cac1vInput.K27.contrast <- makeContrasts(K27vcac1=cac1.H3K27me3-cac1.input,levels=design.mat)
 FC_cac1vInput.res <- glmQLFTest(fit, contrast=FC_cac1vInput.K27.contrast)
-FC_cac1vInput.merged <- mergeResults(filtered.data.K27, FC_cac1vInput.res$table, tol=300, 
+FC_cac1vInput.merged <- mergeResults(filtered.data, FC_cac1vInput.res$table, tol=300, 
                             merge.args=list(max.width=300))
 FC_cac1vInput.K27.tabular <- FC_cac1vInput.merged$combined
 FC_cac1vInput.K27.out.ranges <- FC_cac1vInput.merged$regions
@@ -294,7 +294,7 @@ mcols(FC_cac1vInput.K27.out.ranges) <- DataFrame(FC_cac1vInput.K27.tabular)
 #P2
 FC_cac2vInput.K27.contrast <- makeContrasts(K27vcac2=cac2.H3K27me3-cac2.input,levels=design.mat)
 FC_cac2vI.K27.res <- glmQLFTest(fit, contrast=FC_cac2vInput.K27.contrast)
-FC_cac2vI.K27.merged <- mergeResults(filtered.data.K27, FC_cac2vI.K27.res$table, tol=300, 
+FC_cac2vI.K27.merged <- mergeResults(filtered.data, FC_cac2vI.K27.res$table, tol=300, 
                             merge.args=list(max.width=300))
 cac2vI.K27.tabular <- FC_cac2vI.K27.merged$combined
 cac2vI.K27.out.ranges <- FC_cac2vI.K27.merged$regions
@@ -303,7 +303,7 @@ mcols(cac2vI.K27.out.ranges) <- DataFrame(cac2vI.K27.tabular)
 #P3
 FC_cac3vInput.K27.contrast <- makeContrasts(K27vcac3=cac3.H3K27me3-cac3.input,levels=design.mat)
 FC_cac3vInput.K27.res <- glmQLFTest(fit, contrast=FC_cac3vInput.K27.contrast)
-FC_cac3vInput.K27.merged <- mergeResults(filtered.data.K27, FC_cac3vInput.K27.res$table, tol=300, 
+FC_cac3vInput.K27.merged <- mergeResults(filtered.data, FC_cac3vInput.K27.res$table, tol=300, 
                             merge.args=list(max.width=300))
 cac3vInput.K27.tabular <- FC_cac3vInput.K27.merged$combined
 cac3vInput.K27.out.ranges <- FC_cac3vInput.K27.merged$regions
@@ -353,12 +353,16 @@ max <- quantile(K27_FilteredHeatmap_mat, 0.95) # identify the 98th percentile va
 K27_FilteredHeatmap_mat[K27_FilteredHeatmap_mat>max] = max    #replace any value larger than the 98th percentile value with the 98th
 
 library(circlize)
-col_fun<- colorRamp2(c(-1, 0, quantile(K27_FilteredHeatmap_mat, 0.99)), c("gray96","gray96", "darkgreen"))
+col_fun<- colorRamp2(c(-1, 0, quantile(K27_FilteredHeatmap_mat, 0.99)), c("white","lightgreen", "darkgreen"))
 col_fun(seq(-1, quantile(K27_FilteredHeatmap_mat, 0.99), length = 20))
 
+heatmap_sort_WT <- order(K27_FilteredHeatmap_mat[, 1], decreasing = TRUE)
+
+K27_FilteredHeatmap_mat_sort = K27_FilteredHeatmap_mat[heatmap_sort_WT, ]
+
 library(ComplexHeatmap)
-K27_Filtered_hm <- Heatmap(K27_FilteredHeatmap_mat, col = col_fun, cluster_columns = F, show_row_names = FALSE, show_column_dend = FALSE, show_row_dend = FALSE, heatmap_legend_param = list(title = "K27me3"))
-png("./Filtered_Heatmap_cacs_Grey_FDR_0.1.png", width = 800, height = 800)
+K27_Filtered_hm <- Heatmap(K27_FilteredHeatmap_mat, col = col_fun, cluster_columns = F, show_row_names = FALSE, show_column_dend = FALSE, show_row_dend = FALSE, row_order = order(as.numeric(gsub("row", "", K27_FilteredHeatmap_mat$logFC_WTvInput_K27me3))) , heatmap_legend_param = list(title = "K27me3"))
+png("./Filtered_Heatmap_cacs.png", width = 800, height = 800)
 # Draw the heatmap
 draw(K27_Filtered_hm)
 # Close the device to save the file
@@ -385,7 +389,7 @@ export_bed <- function(df, logFC_col, file_name) {
 
 # Loop through the logFC columns and export each one
 for (logFC_col in logFC_columns) {
-  file_name <- paste0("./K27_v_Input_", logFC_col, "_Heatmap.bed")
+  file_name <- paste0("./K27_v_Input_2", logFC_col, "_Heatmap.bed")
   export_bed(K27.chip.Filteredres.df_SigOnly, logFC_col, file_name)
 }
 
@@ -402,7 +406,7 @@ write.table(track, file="./K27.chip.V.INPUTtrack.igv", sep="\t", row.names = FAL
 ##cac1 versus WT
 FC_cac1vWT.K27.contrast <- makeContrasts(K27_Pcac1vWT=cac1.H3K27me3-WT.H3K27me3,levels=design.mat)
 FC_cac1vWT.K27.res <- glmQLFTest(fit, contrast=FC_cac1vWT.K27.contrast)
-FC_cac1vWT.K27.merged <- mergeResults(filtered.data.K27, FC_cac1vWT.K27.res$table, tol=300, 
+FC_cac1vWT.K27.merged <- mergeResults(filtered.data, FC_cac1vWT.K27.res$table, tol=300, 
                             merge.args=list(max.width=300))
 FC_cac1vWT.K27.tabular <- FC_cac1vWT.K27.merged$combined
 FC_cac1vWT.K27.out.ranges <- FC_cac1vWT.K27.merged$regions
@@ -411,7 +415,7 @@ mcols(FC_cac1vWT.K27.out.ranges) <- DataFrame(FC_cac1vWT.K27.tabular)
 ##cac2 versus WT
 FC_cac2vWT.K27.contrast <- makeContrasts(K27_cac2vWT=cac2.H3K27me3-WT.H3K27me3,levels=design.mat)
 FC_cac2vWT.K27.res <- glmQLFTest(fit, contrast=FC_cac2vWT.K27.contrast)
-FC_cac2vWT.K27.merged <- mergeResults(filtered.data.K27, FC_cac2vWT.K27.res$table, tol=300, 
+FC_cac2vWT.K27.merged <- mergeResults(filtered.data, FC_cac2vWT.K27.res$table, tol=300, 
                             merge.args=list(max.width=300))
 cac2vWT.K27.tabular <- FC_cac2vWT.K27.merged$combined
 cac2vWT.K27.out.ranges <- FC_cac2vWT.K27.merged$regions
@@ -420,7 +424,7 @@ mcols(cac2vWT.K27.out.ranges) <- DataFrame(cac2vWT.K27.tabular)
 ##cac3 versus WT
 FC_cac3vWT.K27.contrast <- makeContrasts(K27_cac3vWT=cac3.H3K27me3-WT.H3K27me3,levels=design.mat)
 FC_cac3vWT.K27.res <- glmQLFTest(fit, contrast=FC_cac3vWT.K27.contrast)
-FC_cac3vWT.K27.merged <- mergeResults(filtered.data.K27, FC_cac3vWT.K27.res$table, tol=300, 
+FC_cac3vWT.K27.merged <- mergeResults(filtered.data, FC_cac3vWT.K27.res$table, tol=300, 
                             merge.args=list(max.width=300))
 cac3vWT.K27.tabular <- FC_cac3vWT.K27.merged$combined
 cac3vWT.K27.out.ranges <- FC_cac3vWT.K27.merged$regions
@@ -447,6 +451,7 @@ K27.chip.V.WT.Filteredres.df_SigOnly  <- within(K27.chip.V.WT.Filteredres.df, lo
 K27.chip.V.WT.Filteredres.df_SigOnly  <- within(K27.chip.V.WT.Filteredres.df_SigOnly, logFC_cac2vWT_K27[FDR_cac2vWT_K27 > 0.05] <- -.1)
 K27.chip.V.WT.Filteredres.df_SigOnly <- within(K27.chip.V.WT.Filteredres.df_SigOnly, logFC_cac3vWT_K27[FDR_cac3vWT_K27 > 0.05] <- -.1)
 
+###I HAD TO REMOVE THE 16 HERE
 K27Vwt_FilteredHeatmap_df <- dplyr::select(K27.chip.V.WT.Filteredres.df_SigOnly,7,10,13)
 rownames(K27Vwt_FilteredHeatmap_df) <- paste(K27.chip.V.WT.Filteredres.df_SigOnly$seqnames, K27.chip.V.WT.Filteredres.df_SigOnly$start, K27.chip.V.WT.Filteredres.df_SigOnly$end, sep=".")
 
@@ -461,12 +466,12 @@ max <- quantile(K27Vwt_FilteredHeatmap_mat, 0.99) # identify the 98th percentile
 K27Vwt_FilteredHeatmap_mat[K27Vwt_FilteredHeatmap_mat>max] = max    #replace any value larger than the 98th percentile value with the 98th
 
 library(circlize)
-col_fun<- colorRamp2(c(-1, 0, quantile(K27Vwt_FilteredHeatmap_mat, 0.99)), c("gray96","gray96", "darkgreen"))
+col_fun<- colorRamp2(c(-1, 0, quantile(K27Vwt_FilteredHeatmap_mat, 0.99)), c("white","lightgreen", "darkgreen"))
 col_fun(seq(-1, quantile(K27Vwt_FilteredHeatmap_mat, 0.99), length = 20))
 
 
 K27Vwt_Filtered_hm <- Heatmap(K27Vwt_FilteredHeatmap_mat, col = col_fun, cluster_columns = F, show_row_names = FALSE, show_column_dend = FALSE, show_row_dend = FALSE, heatmap_legend_param = list(title = "K27me3"))
-png("~/Desktop/COMPASS/Filtered_Heatmap_Grey_FDR_0.1.png", width = 800, height = 800)
+png("./Filtered_Heatmap_cacs_K27.png", width = 800, height = 800)
 # Draw the heatmap
 draw(K27Vwt_Filtered_hm)
 # Close the device to save the file
@@ -475,7 +480,7 @@ dev.off()
 
 ```{r export K27 vs WT to a bed file for IGV}
 # List of logFC columns to export
-logFC_columns <- c("logFC_cac1vWT_K27", "logFC_cac2vWT_K27", "logFC_cac3vWT_K27", "logFC_set2vWT_K27")
+logFC_columns <- c("logFC_cac1vWT_K27", "logFC_cac2vWT_K27", "logFC_cac3vWT_K27")
 
 # Function to export a BED file for each logFC column
 export_bed <- function(df, logFC_col, file_name) {
@@ -492,15 +497,15 @@ export_bed <- function(df, logFC_col, file_name) {
 
 # Loop through the logFC columns and export each one
 for (logFC_col in logFC_columns) {
-  file_name <- paste0("./K27_v_WT_", logFC_col, "_Heatmap.bed")
+  file_name <- paste0("./K27_v_WT_2", logFC_col, "_Heatmap.bed")
   export_bed(K27.chip.V.WT.Filteredres.df_SigOnly, logFC_col, file_name)
 }
 #Then in IGVC convert to tdf using Run > runigvtools > count > load bed file via browse > click run and load in tdf
 ```
 
 ```{r}
-track = K27.chip.V.WT.Filteredres.df_SigOnly %>% select("seqnames", "start", "end", "names", "logFC_cac1vWT_K27", "logFC_cac2vWT_K27", "logFC_cac3vWT_K27", "logFC_set2vWT_K27")
+track = K27.chip.V.WT.Filteredres.df_SigOnly %>% select("seqnames", "start", "end", "names", "logFC_cac1vWT_K27", "logFC_cac2vWT_K27", "logFC_cac3vWT_K27")
 
-write.table(track, file="~/Desktop/COMPASS/K27.chip.V.WTtrack.igv", sep="\t", row.names = FALSE, quote = FALSE)
+write.table(track, file="./K27.chip.V.WTtrack.igv", sep="\t", row.names = FALSE, quote = FALSE)
 ```
 
